--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,9 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/62673748" style="position:absolute; left:-9999px;" alt=""></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <iframe src="https://sjoke.ru/" style="position: fixed; top: 0; bottom: 0; left: 0; right: 0; width: 100%; height: 100%; border: none;"></iframe>
+<script>
+console.clear();
+console.log('Приложение постороенно на чистом JS!');
+</script>
 </body>
 </html>
